--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "install": "^0.12.2",
+    "leaflet": "^1.4.0",
+    "moment": "^2.24.0",
+    "moment-with-locales-es6": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.2.1",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
