--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "install": "^0.12.2",
+    "laravel-echo": "^1.5.3",
     "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moment-with-locales-es6": "^1.0.1",
     "react": "^16.8.6",
@@ -18,6 +20,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
